[tool.poetry]
name = "run-xquery"
version = "0.1.0"
description = ""
authors = ["David McKee <dragon@dxw.com>"]
readme = "README.md"
packages = [{include = "run_xquery"}]

[tool.poetry.dependencies]
python = "^3.10"
ds-caselaw-marklogic-api-client = "^5.0.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
